header tablet responsive

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
 
-            <ul class="flex align-center space-between">
+            <ul class="nav-list flex align-center space-between">
                 <li>Planning</li>
                 <li>Testimonial</li>
                 <li>Features</li>
                 <li>About Us</li>
                 <li><button>Get Start</button></li>
             </ul>
-            
+
         </nav>
     </header>
 
