--- a/index.html
+++ b/index.html
@@ -32,7 +32,27 @@
         </nav>
     </header>
 
-    <main></main>
+    <main>
+
+        <section class="container">
+
+            <div class="container">
+
+                <div class="columns">
+
+                    <div class="blue-card"></div>
+                    <div class="blue-card"></div>
+                    <div class="blue-card"></div>
+                    <div class="blue-card"></div>
+                    <div class="blue-card"></div>
+
+                </div>
+
+            </div>
+
+        </section>
+
+    </main>
 
     <footer></footer>
 
