--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
     <main>
 
+        <!-- BLUE CARDS -->
+
         <section class="container">
 
                 <div class="columns">
@@ -41,10 +43,13 @@
                 
 
                         <div class="blue-card app">
-                            <div class="blue-txt">Get a demo application</div>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque libero blanditiis labore placeat dolor fugit quo, soluta dignissimos quae nesciunt fugiat porro atque. Alias a perspiciatis in labore quod sequi.
-                            </p>
-                            <button class="apple-btn"><i class="fa-brands fa-apple"></i> App Store</button>
+                            <div>
+                                <div class="blue-txt">Get a demo application</div>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque libero blanditiis labore placeat dolor fugit quo, soluta dignissimos quae nesciunt fugiat porro atque. Alias a perspiciatis in labore quod sequi.
+                                </p>
+                                <button class="apple-btn"><i class="fa-brands fa-apple"></i> App Store</button>
+                            </div>
+
                             <div class="phone">
                                 <img src="assets/img/phone.png" alt="phone">
                             </div>
@@ -77,6 +82,12 @@
                     </div>
 
                 </div>
+
+        </section>
+
+        <!-- PURPLE SECTION -->
+
+        <section class="bg-purple">
 
         </section>
 
