sezione purple mobile

--- a/index.html
+++ b/index.html
@@ -88,6 +88,27 @@
         <!-- PURPLE SECTION -->
 
         <section class="bg-purple">
+            <div class="planning">
+            <div>
+                <img src="assets/img/planning1.png" alt="planning1">
+            </div>
+
+            <div class="planning-text">Strategic Planning</div>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora perspiciatis illo saepe! Optio alias quos cumque repellendus. Culpa optio non dolor quae harum minus magni ipsa ipsam, molestias deserunt dolores!</p>
+
+            </div>  
+
+            <div class="development">
+                <div>
+                    <img src="assets/img/planning2.png" alt="planning2">
+                </div>
+
+                <div class="development-text">App Development</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius repellendus illum exercitationem tempora blanditiis, quis veniam impedit? Iste dolor vero corrupti doloribus repudiandae, harum pariatur incidunt architecto consect etur culpa ipsam.</p>
+                <button class="development-btn"><i class="fa-solid fa-arrow-down"></i></button>
+
+            </div>
 
         </section>
 
