--- a/index.html
+++ b/index.html
@@ -86,16 +86,17 @@
         </section>
 
         <!-- PURPLE SECTION -->
-
         <section class="bg-purple">
+        <div class="flex space-between align-center container">
             <div class="planning">
-            <div>
-                <img src="assets/img/planning1.png" alt="planning1">
-            </div>
 
-            <div class="planning-text">Strategic Planning</div>
+                <div>
+                    <img src="assets/img/planning1.png" alt="planning1">
+                </div>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora perspiciatis illo saepe! Optio alias quos cumque repellendus. Culpa optio non dolor quae harum minus magni ipsa ipsam, molestias deserunt dolores!</p>
+                <div class="planning-text">Strategic Planning</div>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora perspiciatis illo saepe! Optio alias quos cumque repellendus. Culpa optio non dolor quae harum minus magni ipsa ipsam, molestias deserunt dolores!</p>
 
             </div>  
 
@@ -110,8 +111,9 @@
 
             </div>
 
-        </section>
+        </div>
 
+        </section>
     </main>
 
     <footer></footer>
