--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <!-- PURPLE SECTION -->
         <section class="bg-purple">
-        <div class="flex space-between align-center container">
+        <div class="container">
             <div class="planning">
 
                 <div>
