--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <nav class="nav-container flex align-center space-between">
+        <nav class="big-container flex align-center space-between">
             
             <div>
                 <img src="assets/img/logo.png" alt="logo">
@@ -114,6 +114,57 @@
         </div>
 
         </section>
+
+        <!-- TESTIMONIALS -->
+        <section class="big-container">
+
+            <div class="testimonials">
+                <div>TESTIMONIALS</div>
+                <div class="purple-text">We are committed expert partners</div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam impedit, recusandae adipisci nisi libero molestiae sit quia, ipsum blanditiis voluptates quisquam explicabo consectetur ullam asperiores eveniet architecto aspernatur. Dolor, at!</p>
+            </div>
+
+            <div class="testimonial-card">
+
+                <div class="testimonial-img">
+                    <img src="assets/img/testimonial1.jpg" alt="testimonial1">
+                </div>
+
+                <div class="testimonial-text">
+                    <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, quaerat magni voluptatibus at cupiditate harum impedit delectus explicabo <i class="fa-solid fa-quote-right"></i></p>
+                    <div>NAT REYNOLDS</div>
+                </div>
+
+            </div>
+
+            <div class="testimonial-card">
+
+                <div class="testimonial-img">
+                    <img src="assets/img/testimonial2.jpg" alt="testimonial2">
+                </div>
+
+                <div class="testimonial-text">
+                    <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, quaerat magni voluptatibus at cupiditate harum impedit delectus explicabo <i class="fa-solid fa-quote-right"></i></p>
+                    <div>CELIA ALMEDA</div>
+                </div>
+
+            </div>
+
+            <div class="testimonial-card">
+
+                <div class="testimonial-img">
+                    <img src="assets/img/testimonial3.jpg" alt="testimonial3">
+                </div>
+
+                <div class="testimonial-text">
+                    <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, quaerat magni voluptatibus at cupiditate harum impedit delectus explicabo <i class="fa-solid fa-quote-right"></i></p>
+                    <div>BOB ROBERTS</div>
+                </div>
+
+            </div>
+
+        </section>
+
     </main>
 
     <footer></footer>
