about us mobile

--- a/index.html
+++ b/index.html
@@ -233,6 +233,29 @@
 
         </section>
 
+        <!-- ABOUT US -->
+
+        <section class="about-us">
+
+            <div>
+                <div class="about-text">About Us</div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, sunt. Quas magni accusantium blanditiis inventore, optio quod. Odio minima ex eum ab voluptas nemo odit cum magni aut? Esse, autem. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis alias maiores suscipit. Maiores illo cumque incidunt quibusdam quae rem, exercitationem fuga accusamus quos amet quasi! Quas tenetur ab aspernatur ullam.</p><br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat reprehenderit officia voluptatum sed aliquam eveniet fugiat id veniam a modi nobis aliquid tempora, voluptates repudiandae atque numquam totam! Similique, asperiores.</p>
+            </div>
+
+            <div class="about-cit">
+                <div class="about-img">
+                    <img src="assets/img/about.jpg" alt="about">
+                </div>
+
+                <div class="about-text">I help companies Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+
+                <button class="about-btn"><i class="fa-brands fa-linkedin"></i> Find me on linkedin</button>
+            </div>
+
+
+        </section>
+
     </main>
 
     <footer></footer>
