--- a/index.html
+++ b/index.html
@@ -237,13 +237,13 @@
 
         <section class="about-us">
 
-            <div>
+            <div class="about-top">
                 <div class="about-text">About Us</div>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, sunt. Quas magni accusantium blanditiis inventore, optio quod. Odio minima ex eum ab voluptas nemo odit cum magni aut? Esse, autem. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis alias maiores suscipit. Maiores illo cumque incidunt quibusdam quae rem, exercitationem fuga accusamus quos amet quasi! Quas tenetur ab aspernatur ullam.</p><br>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat reprehenderit officia voluptatum sed aliquam eveniet fugiat id veniam a modi nobis aliquid tempora, voluptates repudiandae atque numquam totam! Similique, asperiores.</p>
             </div>
 
-            <div class="about-cit">
+            <div class="about-bottom">
                 <div class="about-img">
                     <img src="assets/img/about.jpg" alt="about">
                 </div>
