--- a/index.html
+++ b/index.html
@@ -256,6 +256,21 @@
 
         </section>
 
+        <!-- GET STARTED -->
+
+        <section class="bg-purple">
+            <div class="started">
+                <h3>GET STARTED</h3>
+                <div class="simple-text">Simple, Transparent, Pricing</div>
+                <div class="free-text">It's Free!</div>
+                <p>We're still in beta and we will be for awhile. As we add more funtctionality, we look into other plans with more controls.</p>
+                <button class="start-btn">Get Started</button>
+                <div class="copyright">Copyright 2021 Boolean <i class="fa-solid fa-circle"></i> Classe XX <i class="fa-solid fa-circle"></i> <span class="privacy-text">Privacy Policy</span></div>
+            </div>
+
+
+        </section>
+
     </main>
 
     <footer></footer>
