--- a/index.html
+++ b/index.html
@@ -273,7 +273,13 @@
 
     </main>
 
-    <footer></footer>
+    <footer>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit saepe, sint maxime, dolorum fugiat ullam dolor soluta deserunt similique corrupti eius magnam, repudiandae sed illum incidunt atque repellendus voluptas est.</p>
+            <div><a>Lorem ipsum</a> Lorem ipsum dolor sit</div>
+            <div><a>Boolean careers</a></div>
+        </div>
+    </footer>
 
 </body>
 </html>
