--- a/index.html
+++ b/index.html
@@ -246,9 +246,10 @@
             <div class="about-bottom">
                 <div class="about-img">
                     <img src="assets/img/about.jpg" alt="about">
+                    <i class="fa-solid fa-quote-left"></i>>
                 </div>
 
-                <div class="about-text">I help companies Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                <div class="about-text">I help companies lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
 
                 <button class="about-btn"><i class="fa-brands fa-linkedin"></i> Find me on linkedin</button>
             </div>
