--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     </main>
 
     <footer>
-        <div class="started">
+        <div class="f-container">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit saepe, sint maxime, dolorum fugiat ullam dolor soluta deserunt similique corrupti eius magnam</p>
             <div><a>Lorem ipsum</a> Lorem ipsum dolor sit</div>
             <div><a>Boolean careers</a></div>
